--- a/src/app/pages/header/header.component.html
+++ b/src/app/pages/header/header.component.html
@@ -52,8 +52,8 @@
           Серьги
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" routerLink="/add-earring">Добавить цепочку</a>
-          <a class="dropdown-item" routerLink="/list-earring">Список цепочек</a>
+          <a class="dropdown-item" routerLink="/add-earring">Добавить серьги</a>
+          <a class="dropdown-item" routerLink="/list-earring">Список сережек</a>
         </div>
       </li>
     </ul>
