--- a/src/app/pages/products/list-earring/list-earring.component.html
+++ b/src/app/pages/products/list-earring/list-earring.component.html
@@ -9,8 +9,8 @@
         <th>Название модели</th>
         <th>Стоимость</th>
         <th>Дата начала продаж</th>
-        <th>Вес цепочки</th>                
-        <th>Материалы цепочки</th>
+        <th>Вес</th>                
+        <th>Материалы сережек</th>
         <th>Страна производства</th>        
         <th>Доступен в продаже</th>
         <th>Редактировать</th>        
