--- a/src/app/pages/products/add-earring/add-earring.component.html
+++ b/src/app/pages/products/add-earring/add-earring.component.html
@@ -43,7 +43,7 @@
 
   <div>    
     <label for="material_earringInput" class="form-label">Материалы</label>
-    <select id="material_earringInput" multiple  class="select-css form-select" formControlName="material_earring" name="material_earring">      
+    <select id="material_earringInput" multiple size="2" class="select-css form-select" formControlName="material_earring" name="material_earring">      
       <option *ngFor="let name of materials" [value]="name"> {{[name]}} </option>
     </select>    
   </div>
