--- a/src/styles.css
+++ b/src/styles.css
@@ -36,7 +36,7 @@ label {
   display: block; 
   
   color: #444; 
-  line-height: 1.3; 
+  line-height: 1; 
   padding: .6em 1.4em .5em .3em; width: 100%; 
   max-width: 100%; 
   box-sizing: border-box; 
@@ -68,7 +68,7 @@ label {
 .form-control {
   margin: 2px 0;
   border: 1px solid #ffed00;
-  height: calc(2.25rem);
+  height: 25px;
 }
 
 .form-control-check {
