--- a/src/app/pages/header/header.component.html
+++ b/src/app/pages/header/header.component.html
@@ -4,7 +4,7 @@
     routerLink="/main"
     >Каталог украшений</a
   >
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+  <div class="navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item dropdown">
         <a
